- Improved html tag stripping.

2008-01-20: Version 1.1.3

- Added Italian translation (Thanks to Diego Pierotto).
- Updated "example/rssreader.conf".
- Added '-Wno-parentheses' to the compiler options.
- Mapped 'kInfo' as help key in setup menu.

2008-02-18: Version 1.1.4

- Replaced asprintf with cString.
- Updated "example/rssreader.conf".

2008-03-27: Version 1.6.0

- Updated for vdr-1.6.0.
- Updated French translation (Thanks to Michaël Nival).
- Updated Italian translation (Thanks to Diego Pierotto).

2008-06-20: Version 1.6.1

- Updated and relocated rssreader.conf to under
  /vdrconf/rssreader directory.
- Updated Italian translation (Thanks to Diego Pierotto).
- Added preliminary support for xineliboutput.

2008-10-12: Version 1.6.2

- Converted HISTORY and fi_FI.po to UTF-8.
- Added an alternate method to navigate with color buttons.
- Fixed detection of video and music file extensions.

2009-04-05: Version 1.6.3

- Cleaned up compilation warnings.
- Fixed a crash bug when pressing OK in an empty menu.
- Fixed RSS parsing.
- Added correct character set conversion tables for
  ISO-8859-2, ISO-8859-15 and CP1250.
- Updated "example/rssreader.conf".
- Added a new "LOAD" SVDRP command.

2009-04-14: Version 1.6.4

- Fixed RSS parsing.
- Updated Italian translation (Thanks to Diego Pierotto).
- Fixed a crash bug in the SVDRP help.

2010-03-05: Version 1.7.0

- Updated for vdr-1.7.13.
- Added Estonian translation (Thanks to Arthur Konovalov).

2010-12-27: Version 1.7.1

- Added Makefile depencency for objects.
- Added support for LDFLAGS.
- Updated "example/rssreader.conf".
- Added URL redirection support.
- Fixed RSS parsing.

2011-12-04: Version 1.7.2

- Updated Makefile.
- Updated "example/rssreader.conf".
- Modified menu titles.
- Added cppcheck target into Makefile.
- Cleaned up CURL includes.

2013-02-10: Version 1.7.3

- Updated for vdr-1.7.37.

2013-xx-xx: Version 1.7.4

- Added Ukrainian translation (Thanks to Yarema aka Knedlyk).