@@ -15,7 +15,7 @@ Savon Sanomat          : http://www.savonsanomat.fi/?service=rss
 Kauppalehti            : http://www.kauppalehti.fi/5/i/talous/uutiset/etusivu/rss.jsp
 Muropaketti            : http://plaza.fi/muropaketti/feed
 Digitoday              : http://www.digitoday.fi/feeds/Digitoday.xml
-Verkkouutiset          : http://www.verkkouutiset.fi/index.php?option=com_content&view=section&layout=blog&id=5&Itemid=7&format=feed&type=rss
+Verkkouutiset          : http://www.verkkouutiset.fi/index.php/kotimaa?format=feed&type=rss
 Tietokone              : http://www.tietokone.fi/feed/rss/uutiset
 Tietoviikko            : http://www.tietoviikko.fi/rss.xml
 Helsingin kaupunki     : http://www.hel.fi/feeds/uutiset.xml
@@ -52,7 +52,7 @@ ScienceBlogs           : http://feeds.feedburner.com/ScienceBlogs/Global
 Golem                  : http://rss.golem.de/rss.php?feed=RSS2.0
 ZDNet                  : http://www.zdnet.de/feeds/news/xml/rss_h20.xml.htm
 Zeit                   : http://newsfeed.zeit.de/
-Stern                  : http://www.stern.de/standard/rss.php?channel=all
+Stern                  : http://www.stern.de/feed/standard/all/
 Spiegel                : http://www.spiegel.de/schlagzeilen/index.rss
 Bild.de                : http://feeds2.feedburner.com/bild.xml
 Heise                  : http://www.heise.de/newsticker/heise.rdf
@@ -78,6 +78,7 @@ LKML Ingo Molnar       : http://lkml.org/groupie.php?author=Ingo+Molnar
 -- Gentoo              : # Label
 Gentoo                 : http://www.gentoo.org/rdf/en/gentoo-news.rdf
 VDR Project Overlay    : http://overlays.gentoo.org/proj/vdr/timeline?changeset=on&wiki=on&max=50&daysback=90&format=rss
+Gentoo Portage News    : http://gentoo-portage.com/RSS/News
 Gentoo Portage Ebuilds : http://gentoo-portage.com/RSS/Newest
 Gentoo Portage GLSA    : http://gentoo-portage.com/RSS/GLSA
 Gentoo Portage Overlays : http://gpo.zugaina.org/RSS/News
