@@ -33,6 +33,7 @@ static struct conv_table post_conv_table[] =
   {"&amp;",    "\x26"},
   {"&#38;",    "\x26"},
   {"&#038;",   "\x26"},
+  {"&#39;",    "\x27"},
   {"&#039;",   "\x27"},
   {"&#40;",    "\x28"},
   {"&#41;",    "\x29"},
